# ROS2_foxy

Water_TCP/: package.xml  setup.cfg  setup.py
Water_TCP/Water_TCP/: Water_TCP_Server.py
cpp_test/: CMakeLists.txt  package.xml
cpp_test/src/: test.cpp
my_data/: CMakeLists.txt  package.xml
my_data/msg/: Novel.msg
my_data/srv/: Student.srv  Watercmd.srv
param_cpp/: CMakeLists.txt  package.xml
param_cpp/src/: param_pub_cpp.cpp
param_py/: package.xml  setup.cfg  setup.py
param_py/launch/: param_pub_launch.py  param_samenode_launch.py
param_py/param_py/: param_pub_py.py
python_test/: package.xml  setup.py
python_test/python_test/: test.py
service_cpp/: CMakeLists.txt  package.xml
service_cpp/src/: client_cpp.cpp  server_cpp.cpp
service_cpp/srv/: Data.srv
service_py/: package.xml  setup.cfg  setup.py
service_py/service_py/: client_py.py  server_py.py
topic_cpp/: CMakeLists.txt  package.xml
topic_cpp/launch/: topic_cpp_launch.py
topic_cpp/msg/: Novel.msg
topic_cpp/src/: pub_cpp.cpp  sub_cpp.cpp
topic_py/: package.xml  setup.cfg  setup.py
topic_py/launch/: topic_pub_launch.py
topic_py/topic_py/: pub_msg.py  pub_py.py  sub_py.py
